--- a/users/templates/users/admin login.html
+++ b/users/templates/users/admin login.html
@@ -130,7 +130,7 @@
 						</div>
 
 						<div>
-							<a href="#" class="txt1">
+							<a href="{%url 'password_reset' %}" class="txt1">
 								Forgot Password?
 							</a>
 						</div>
@@ -168,5 +168,7 @@
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
-  </body>
+
+</header>
+</body>
 </html>
