--- a/users/templates/users/student login.html
+++ b/users/templates/users/student login.html
@@ -130,7 +130,7 @@
 						</div>
 
 						<div>
-							<a href="#" class="txt1">
+							<a href="{%url 'password_reset' %}" class="txt1">
 								Forgot Password?
 							</a>
 						</div>
@@ -141,7 +141,7 @@
 							Login
 						</button>
 					</div>
-					<a href="{%url 'register' %}" class="txt2">
+					<a href="{%url 'studentregister' %}" class="txt2">
 								Sign up
 							</a>
 				</form>
@@ -166,5 +166,5 @@
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
-  </body>
+	</header> </body>
 </html>
